--- a/components/AboutUsPhoto/styles.module.css
+++ b/components/AboutUsPhoto/styles.module.css
@@ -4,7 +4,7 @@
   top: -10px;
   background-color: white;
   box-shadow: -12px 15px 8px 0 rgba(0, 0, 0, 0.3),
-    0 10px 20px rgba(0, 0, 0, 0.1);
+    0 10px 20px rgba(0, 0, 0, 0.1) !important;
   animation: polaroidSlide 1.5s ease forwards;
 }
 
