--- a/components/BillboardTable/styles.module.css
+++ b/components/BillboardTable/styles.module.css
@@ -1,17 +1,17 @@
 .inCart {
-  background-color: var(--mantine-primary-color-light);
+  background-color: var(--mantine-primary-color-light) !important;
 }
 
 .inCart:hover {
-  background-color: var(--mantine-primary-color-light-hover);
+  background-color: var(--mantine-primary-color-light-hover) !important;
 }
 
 .selected {
-  background-color: var(--mantine-color-red-light);
+  background-color: var(--mantine-color-red-light) !important;
 }
 
 .selected:hover {
-  background-color: var(--mantine-color-red-light-hover);
+  background-color: var(--mantine-color-red-light-hover) !important;
 }
 
 .pillsList {
