--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -9,7 +9,7 @@
   background-color: var(--mantine-primary-color-filled);
   border-top: rem(1px) solid
     light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
-  /* color: white; */
+  color: light-dark(black, white);
 }
 
 .logo {
