--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  margin-top: rem(120px);
+  /* margin-top: rem(720px); */
   padding-top: calc(var(--mantine-spacing-xl) * 2);
   padding-bottom: calc(var(--mantine-spacing-xl) * 2);
   /* background-color: light-dark(
@@ -10,6 +10,9 @@
   border-top: rem(1px) solid
     light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
   color: light-dark(black, white);
+  @media (max-width: $mantine-breakpoint-sm) {
+    /* background-color: aqua; */
+  }
 }
 
 .logo {
@@ -51,6 +54,17 @@
 
 .wrapper {
   width: rem(280px);
+  @media (max-width: $mantine-breakpoint-sm) {
+    margin-top: var(--mantine-spacing-xs);
+  }
+}
+
+.paymentOptions {
+  display: flex;
+  justify-content: flex-end !important;
+  @media (max-width: $mantine-breakpoint-sm) {
+    justify-content: center !important;
+  }
 }
 
 .link {
@@ -72,6 +86,9 @@
   font-family: Greycliff CF, var(--mantine-font-family);
   margin-bottom: calc(var(--mantine-spacing-xs) / 2);
   color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
+  @media (max-width: $mantine-breakpoint-sm) {
+    text-align: center;
+  }
 }
 
 .afterFooter {
