--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -6,6 +6,8 @@
     var(--mantine-color-gray-0),
     var(--mantine-color-dark-6)
   ); */
+  padding-left: 0;
+  padding-right: 0;
   background-color: var(--mantine-primary-color-filled);
   border-top: rem(1px) solid
     light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
@@ -36,7 +38,6 @@
 .inner {
   display: flex;
   justify-content: space-between;
-
   @media (max-width: $mantine-breakpoint-sm) {
     flex-direction: column;
     align-items: center;
